# gw-dashboard

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  MANIFEST.in  README.md  config.example.yaml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: publish.yml
docs/: install-guide.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  index.css  orbit.ts  types.ts
gw/: __main__.py  config.py  main.py  startup.py
gw/daemon/: __init__.py  runner.py
gw/database/: __init__.py  manager.py
gw/orbit/: __init__.py  propagation.py
gw/scraper/: __init__.py  celestrak.py  huiji.py
gw/utils/: __init__.py  rocket.py  tle.py  update_database.py  update_progress.py
gw/web/: __init__.py  __main__.py  api.py  app.py  runtime.py  time_service.py
gw/web/static/: index.html
gw/web/static/assets/: index-B6sIU1y_.js  index-BPeNp1Ge.js  index-Bq-aAv3N.js  index-Gygd35IV.css  index-HEtFAX-X.js
tests/: test_celestrak.py  test_config.py  test_daemon.py  test_database_manager.py  test_database_operations.py  test_database_web_queries.py  test_huiji.py  test_ntp_time.py  test_orbit_propagation.py  test_package_main.py  test_startup.py  test_tle_utils.py  test_update_database.py  test_web_api.py  test_web_main.py
