[project]
name = "gw-dashboard"
version = "0.1.0"
description = "星网（GW）卫星星座数据仪表盘"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "curl-cffi>=0.15.0",
    "fastapi>=0.136.1",
    "psycopg[binary]>=3.3.3",
    "pymysql>=1.1.2",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "sgp4>=2.25",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.0.0",
]
