[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gw-dashboard"
version = "0.1.1"
description = "星网（GW）卫星星座数据仪表盘"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.12"
authors = [
    { name = "NearlyHeadlessJack" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "curl-cffi>=0.15.0",
    "fastapi>=0.136.1",
    "psycopg[binary]>=3.3.3",
    "pymysql>=1.1.2",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "sgp4>=2.25",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]

[project.urls]
Homepage = "https://github.com/NearlyHeadlessJack/gw-dashboard"
Repository = "https://github.com/NearlyHeadlessJack/gw-dashboard"
Issues = "https://github.com/NearlyHeadlessJack/gw-dashboard/issues"

[project.scripts]
gw-dashboard = "gw.__main__:main"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
include = ["gw*"]

[tool.setuptools.package-data]
"gw.web" = [
    "static/index.html",
    "static/favicon.svg",
    "static/assets/*",
]
